--- a/sass/modules/_appointment-area.scss
+++ b/sass/modules/_appointment-area.scss
@@ -27,7 +27,7 @@
             overflow: hidden;
             border-radius: 20px 20px 0 0;
             .title{
-                margin-top: 20px;
+                margin-top: 40px;
                 padding: 0 32px;
                 @include sm{
                     padding: 0 12px;
